# flicker

./: meson.build
src/: main.c  meson.build
